--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "base64url": "^3.0.1",
-    "express": "^4.17.1",
-    "http-errors": "^1.8.0",
-    "json5": "^2.2.0",
+    "express": "^4.17.3",
+    "http-errors": "^1.8.1",
+    "http-proxy-middleware": "^2.0.6",
+    "json5": "^2.2.1",
     "morgan": "^1.10.0",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.7",
     "semver": "^5.7.1"
   }
 }
